# intel

./: .env.example  .gitignore  README.md  celerybeat-schedule.db  pyproject.toml  setup-local.sh  setup-vps.sh
app/: __init__.py  config.py  dependencies.py  main.py
app/alerts/: __init__.py  pusher.py
app/api/: __init__.py  intel_router.py  schemas.py
app/calibration/: __init__.py  cascade_edges.py  drift_detector.py  formula_weights.py  source_weights.py
app/db/: __init__.py  event_models.py  models.py  pool.py  queries.py
app/engine/: __init__.py  cascade.py  decision_generator.py  event_fusion.py  event_orchestrator.py  fusion.py  patterns.py  (+2 more)
cli/: __init__.py  db.py  formatters.py  main.py  renderers.py
docs/: ADR-001-monorepo-deployment.md  api-reference.md  architecture.md  ci-cd-auto-deploy.md  cli-reference.md  deployment.md  environment-variables.md  nextjs-integration.md  operations-runbook.md  risk-scoring.md  security.md  source-catalog.md  vps-setup-tutorial.md
migrations/: 000_init_schema.sql  001_create_events.sql  001_pipeline_expansion.sql  002_sync_source_weights.sql
scripts/: dedup_cleanup.py  generated_sources.py  manual_ingest.py  manual_ingest_tier1.py  retag_legacy_signals.py  sync_catalog.py
tests/: __init__.py  conftest.py  diagnostic_vector_and_scraper.py  test_api.py  test_calibration.py  test_cascade.py  test_celery_schedule.py  test_chunker.py  test_decision_engine.py  test_dedup.py  test_filters.py  test_fusion.py  test_pipeline_expansion.py  test_risk_scorer.py  test_sanitizer.py  test_scenarios.py  test_time_decay.py
(+61 files in other folders)
