[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noble-intel"
version = "3.0.0"
description = "Noble Intel — Adaptive Logistics Decision Engine"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "celery[redis]==5.4.0",
    "qdrant-client==1.13.3",
    "psycopg[binary]==3.2.4",
    "psycopg-pool==3.2.4",
    "google-genai==1.14.0",
    "feedparser==6.0.11",
    "playwright==1.49.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "sentry-sdk[fastapi]==2.19.2",
    "typer[all]==0.15.1",
    "click>=8.1,<8.2",
    "rich==13.9.4",
    "textual==1.0.0",
    "psutil==6.1.0",
    "websockets==14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx",
]

[project.scripts]
noblecli = "cli.main:app"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
